--- a/sylvias-portfolio/src/App.css
+++ b/sylvias-portfolio/src/App.css
@@ -1,42 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 
 :root {
   --accent-color: seagreen;
@@ -58,9 +19,35 @@
   text-align: center;
   justify-content: center;
   flex-direction: column;
+
 }
 
-/*start header - includes h1 and nav information*/
+.homepage-bgimage{
+   background-image: url("../public/ptarmigan.jpg");
+   height: 100vh;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+}
+
+
+
+
+
+
+/*USE ON HEADER SECTION?? start header - includes h1 and nav information
+.mainComponent h1 {
+  margin-top: 20px;
+  color: var(--accent-color);
+}*/
+/*
+#pTarmigan {
+  width: calc(100vw - 20px);
+  height: calc(100vh - 20px);
+}*/
+
+
+/*
 header {
   padding: 8px;
 }
@@ -87,7 +74,7 @@ nav a {
   text-decoration: none;
 }
 
-/*start main & set margin*/
+
 .about,
 .about-img,
 .project-card-big,
@@ -97,7 +84,7 @@ nav a {
   margin: 10px;
 }
 
-/* adding flex to sections*/
+
 main,
 .ptarmigan,
 .flexbox-about,
@@ -110,27 +97,26 @@ main,
   display: flex;
 }
 
-/*positioning ptarmiagan ridge image and parent sections including about*/
+
 .ptarmigan,
 .flexbox-about{
   width: 100vw;
   height: auto;
 }
 
-/*class to center box*/
+
 .center {
   flex-direction: row;
   margin-top: 16px;
   }
 
-/*parent element for about section*/
+
 .flexbox-about {
   justify-content: space-around;
   margin: 0 auto;
   flex-flow: row wrap;
 }
 
-/*children in about section*/
 .about {
   width: 50vw;
   height: 40vh;
@@ -148,7 +134,7 @@ main,
   object-fit: cover;
 }
 
-/*parent work section*/
+
 .projects-card {
   margin: 0 auto;
   width: 100vw;
@@ -156,7 +142,7 @@ main,
   flex-flow: row wrap;
   
 }
-/*child larger card*/
+
 .project-card-big {
   justify-content: flex-end;
   width: calc(90vw - 20px);
@@ -166,7 +152,7 @@ main,
   background-repeat: no-repeat;
 }
 
-/*children small cards*/
+
 .project-card-small {
   justify-content: flex-end;
   width: calc(45vw - 20px);
@@ -175,7 +161,7 @@ main,
   background-size: cover;
 }
 
-/*backgroun images for cards
+backgroun images for cards
 #horiseon{
   background-image: url("./horiseon.png");
 }
@@ -184,10 +170,10 @@ main,
 }
 #dinner-drinks{
   background-image: url("./dinnerdrinks.png");
-}*/
+}
 
 
-/*borders & shadow*/
+
 .about,
 .about-img,
 .project-card-big,
@@ -199,12 +185,12 @@ main,
 
 }
 
-/*contact me section*/
+
 .contact-me-nav {
   justify-content: center;
 }
 
-/*start media section*/
+start media section
 
 @media screen and (min-width: 768px) {
   .project-card-big {
@@ -270,3 +256,4 @@ main,
     margin-right: calc(23vw - 20px);
     }
   }
+*/
