content with navbar styling for now

--- a/sylvias-portfolio/src/App.css
+++ b/sylvias-portfolio/src/App.css
@@ -1,7 +1,7 @@
-
 :root {
-  --accent-color: seagreen;
   --main-color: rgb(225, 233, 245);
+  --accent-color: seagreen;
+  --nav-accent: rgb(240, 158, 27);
   --font: 'Gill Sans', 'Gill Sans MT', calibri , 'Trebuchet MS', sans-serif;
   --border-width: 2px;
   --shadow: 3px 3px 6px #aaaaaa;
@@ -22,6 +22,7 @@
 
 }
 
+/* https://stackoverflow.com/questions/60970319/how-to-set-my-background-image-fit-to-screen-in-react*/
 .homepage-bgimage{
    background-image: url("../public/ptarmigan.jpg");
    height: 100vh;
@@ -30,8 +31,48 @@
    background-size: cover;
 }
 
+/* Begin Header/Navbar */
+
+.headerNav{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.developerName{
+  padding: 20px 8px 0px 8px;
+}
+.developerName h1{
+  font-size: 39px;
+}
+.nav-tabs{
+  flex-direction: row;
+  align-items:flex-start;
+  }
+
+.nav-item{
+  display: flex;
+  font-size: 1.1rem;
+  text-decoration: none;
+margin: 0 .25rem 0 .25rem
+    
+  }
+
+.nav-item a{
+  color: var(--accent-color);
+}
+
+.nav-item a:hover {
+  color:var(--nav-accent);
+}
 
 
+
+
+  
+
+
+
+/* End Header/Navbar */
 
 
 
