added portfolio section borrowing a lot of code from my previous portfolio with html/css.  Also made about me section the default for application load

--- a/sylvias-portfolio/src/App.css
+++ b/sylvias-portfolio/src/App.css
@@ -23,20 +23,25 @@
 }
 
 /* https://stackoverflow.com/questions/60970319/how-to-set-my-background-image-fit-to-screen-in-react*/
-.homepage-bgimage{
-   background-image: url("../public/ptarmigan.jpg");
-   height: 100vh;
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
-}
 
 /* Begin Header/Navbar */
+body{
+  background-image: url("../public/ptarmigan.jpg");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+
+}
 
 .headerNav{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100vw;
+  position: fixed;
+
 }
 .developerName{
   padding: 20px 8px 0px 8px;
@@ -47,6 +52,7 @@
 .nav-tabs{
   flex-direction: row;
   align-items:flex-start;
+  text-decoration: none;
   }
 
 .nav-item{
@@ -65,236 +71,107 @@ margin: 0 .25rem 0 .25rem
   color:var(--nav-accent);
 }
 
+/* Begin About Me */
 
 
-
-  
-
-
-
-/* End Header/Navbar */
-
-
-
-/*USE ON HEADER SECTION?? start header - includes h1 and nav information
-.mainComponent h1 {
-  margin-top: 20px;
-  color: var(--accent-color);
-}*/
-/*
-#pTarmigan {
-  width: calc(100vw - 20px);
-  height: calc(100vh - 20px);
-}*/
-
-
-/*
-header {
-  padding: 8px;
-}
-
-h1,
-nav ul { 
+.aboutMeContainer{
   display: flex;
   flex-direction: row;
+  width: 70vw;
+  height: 70vh;
+  position: fixed;
+  background-color: transparent;
+  justify-content:space-between;
+  margin: 9rem 2rem 2rem 13rem
 }
-
-h1 {
-  justify-content: flex-start;
-  padding: 0 8px 8px 8px;
-  font-size: 24px;
-}
-
-nav ul {
-  padding: 8px 8px 0 8px;
-  justify-content: flex-end;
-}
-
-nav a {
-  padding: 8px;
-  text-decoration: none;
-}
-
-
-.about,
-.about-img,
-.project-card-big,
-.project-card-small
- {
-  flex-wrap: wrap;
-  margin: 10px;
-}
-
-
-main,
-.ptarmigan,
-.flexbox-about,
-.center,
-.about,
-.about-img,
-.projects-card,
-.project-card-big,
-.project-card-small {
-  display: flex;
-}
-
-
-.ptarmigan,
-.flexbox-about{
-  width: 100vw;
-  height: auto;
-}
-
-
-.center {
-  flex-direction: row;
-  margin-top: 16px;
-  }
-
-
-.flexbox-about {
-  justify-content: space-around;
-  margin: 0 auto;
-  flex-flow: row wrap;
-}
-
-.about {
-  width: 50vw;
-  height: 40vh;
-  position: relative;
-  background-color: var(--accent-color);
-  color: var(--main-color);
-  padding: 30px;
-}
-
-.about-img {
-  justify-content: flex-end;
-  width: 40vw;
-  height: 40vh;
+.imageContainer{
+  width: 25vw;
+  height: 70vh;
   position: relative;
   object-fit: cover;
+  /*figure out border 
+  
+  border-color: var(--accent-color);
+  border-width: 20px;
+
+  */
 }
 
+.imageContainer img{
+  width: 32vw;
+  height: 75vh;
+  object-fit: cover;
+
+}
+
+.textContainer{
+  width: 32vw;
+  height: 75vh;
+  position: relative;
+}
+
+.textContainer p{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 25vw;
+  height: 70vh;
+}
+/* Start Projects */
+.projectComponent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .projects-card {
   margin: 0 auto;
-  width: 100vw;
-  height: auto;
+  width: 50vw;
+  height: 40vh;
+  position: relative;
   flex-flow: row wrap;
-  
-}
-
-.project-card-big {
-  justify-content: flex-end;
-  width: calc(90vw - 20px);
-  height: calc(47vh - 20px);
-  position: relative;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-
-.project-card-small {
-  justify-content: flex-end;
-  width: calc(45vw - 20px);
-  height: calc(25vh - 20px);
-  position: relative;
-  background-size: cover;
-}
-
-backgroun images for cards
-#horiseon{
-  background-image: url("./horiseon.png");
-}
-#portfolio{
-  background-image: url("./portfolio.png");
-}
-#dinner-drinks{
-  background-image: url("./dinnerdrinks.png");
-}
-
-
-
-.about,
-.about-img,
-.project-card-big,
-.project-card-small {
   border-width: var(--border-width);
   border-style: solid;
   border-color: var(--accent-color);
   box-shadow: var(--shadow);
+  
+}
 
+.image-card {
+  justify-content: flex-end;
+  width: 50vw;
+  height: 29vh;
+  position: relative;
+  background-size: cover;
+}
+
+.information-card {
+  justify-content: flex-end;
+  width: 50vw;
+  height: 11vh;
+  position: relative;
+  background-size: cover;
+}
+
+#goalie{
+  background-image: url("./goalie.png");
+}
+#jate{
+  background-image: url("./jate.png");
+}
+#dinner{
+  background-image: url("./dinner.png");
+}
+#quiz{
+  background-image: url("./codequiz.png");
+}
+#weather{
+  background-image: url("./workday.png");
+}
+#workday{
+  background-image: url("./weather.png");
 }
 
 
-.contact-me-nav {
-  justify-content: center;
-}
 
-start media section
-
-@media screen and (min-width: 768px) {
-  .project-card-big {
-    width: calc(90vw - 20px);
-    height:calc(65vh - 20px);
-    min-width: 60%;
-    min-height: 50%;
-    }
-
-  .project-card-small {
-    width: calc(45vw - 20px);
-    height:calc(35vh - 20px);
-    min-width: 40%;
-    min-height: 40%;
-    }
-
-  .about {
-    min-width: 40%;
-    flex-grow: 0;
-    font-size: 16px;
-    padding: 50px;
-    }
-
-  .about-img{
-    min-width: 35%;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  header {
-    width: 100%;
-    }
-
-  .project-card-big {
-    min-width: 50%;
-    min-height: 70%;
-    width: calc(50vw - 20px);
-    height: calc(62vh - 20px);
-    }
-
-  .project-card-small {
-    width: calc(25vw - 20px);
-    height:calc(42vh - 20px);
-    min-width: 31%;
-    min-height: 50%;
-    }
-
-  .about{
-    font-size: 16px;
-    padding: 50px;
-    width: calc(25vw - 20px);
-    height: calc(60vh - 20px);
-    min-width: 25%;
-    min-height: 50%;
-    margin-left: calc(23vw - 20px);
-    }
-
-  .about-img{
-    width: calc(25vw - 20px);
-    height: calc(60vh - 20px);
-    min-width: 25%;
-    min-height: 50%;
-    margin-right: calc(23vw - 20px);
-    }
-  }
-*/
