--- a/sylvias-portfolio/src/App.css
+++ b/sylvias-portfolio/src/App.css
@@ -72,8 +72,6 @@ margin: 0 .25rem 0 .25rem
 }
 
 /* Begin About Me */
-
-
 .aboutMeContainer{
   display: flex;
   flex-direction: row;
@@ -173,5 +171,15 @@ margin: 0 .25rem 0 .25rem
   background-image: url("./weather.png");
 }
 
+/* Start Form CSS */
 
-
+.formContainer {
+  display: flex;
+  flex-direction: row;
+  width: 70vw;
+  height: 70vh;
+  position: fixed;
+  background-color: transparent;
+  justify-content:space-between;
+  margin: 9rem 2rem 2rem 13rem
+}
