TERRIBLY added the footer - have to edit CSS in future

--- a/sylvias-portfolio/src/App.css
+++ b/sylvias-portfolio/src/App.css
@@ -204,3 +204,18 @@ margin: 0 .25rem 0 .25rem
   justify-content:space-between;
   margin: 9rem 2rem 2rem 13rem
 }
+
+
+/*Start Footer */
+.footerContainer{
+  display: flex;
+  flex-direction: row;
+  width: 40vw;
+  height: 70vh;
+  position: fixed;
+  background-color: transparent;
+  justify-content:space-between;
+  margin: 9rem 2rem 2rem 13rem
+
+
+}
